--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,19 @@ md2pages = "md2pages.cli:main"
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.hatch.build.targets.wheel]
+packages = ["md2pages"]
+include = [
+    "md2pages/templates/**/*",
+    "md2pages/static/**/*",
+]
+
+[tool.hatch.build.targets.sdist]
+include = [
+    "md2pages/templates/**/*",
+    "md2pages/static/**/*",
+]
+
 [dependency-groups]
 dev = [
     "pytest>=8.4.2",
